--- a/package.json
+++ b/package.json
@@ -24,19 +24,22 @@
     "@awesome-cordova-plugins/core": "^6.7.0",
     "@awesome-cordova-plugins/native-storage": "^6.7.0",
     "@awesome-cordova-plugins/sqlite": "^6.7.0",
-    "@capacitor/android": "6.0.0",
+    "@capacitor-mlkit/barcode-scanning": "^6.1.0",
+    "@capacitor/android": "^6.0.0",
     "@capacitor/app": "6.0.0",
-    "@capacitor/core": "6.0.0",
+    "@capacitor/camera": "^6.0.1",
+    "@capacitor/core": "^6.0.0",
     "@capacitor/haptics": "6.0.0",
     "@capacitor/keyboard": "6.0.0",
     "@capacitor/status-bar": "6.0.0",
+    "@capacitor/storage": "^1.2.5",
     "@ionic-native/core": "^5.36.0",
     "@ionic-native/sqlite": "^5.36.0",
     "@ionic/angular": "^8.0.0",
     "@ionic/storage-angular": "^4.0.0",
     "cordova-sqlite-storage": "^6.1.0",
     "ionicons": "^7.0.0",
-    "rxjs": "~7.8.0",
+    "rxjs": "^7.8.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
   },
