--- a/package.json
+++ b/package.json
@@ -21,9 +21,6 @@
     "@angular/platform-browser": "^17.0.2",
     "@angular/platform-browser-dynamic": "^17.0.2",
     "@angular/router": "^17.0.2",
-    "@awesome-cordova-plugins/core": "^6.7.0",
-    "@awesome-cordova-plugins/native-storage": "^6.7.0",
-    "@awesome-cordova-plugins/sqlite": "^6.7.0",
     "@capacitor-mlkit/barcode-scanning": "^6.1.0",
     "@capacitor/android": "^6.0.0",
     "@capacitor/app": "6.0.0",
@@ -32,14 +29,9 @@
     "@capacitor/haptics": "6.0.0",
     "@capacitor/keyboard": "6.0.0",
     "@capacitor/status-bar": "6.0.0",
-    "@capacitor/storage": "^1.2.5",
-    "@ionic-native/core": "^5.36.0",
-    "@ionic-native/sqlite": "^5.36.0",
     "@ionic/angular": "^8.0.0",
     "@ionic/storage-angular": "^4.0.0",
-    "cordova-sqlite-storage": "^6.1.0",
     "ionicons": "^7.0.0",
-    "rxjs": "^7.8.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
   },
@@ -62,6 +54,7 @@
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsdoc": "^48.2.1",
     "eslint-plugin-prefer-arrow": "1.2.2",
+    "jasmine": "^5.1.0",
     "jasmine-core": "~5.1.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.4.0",
