--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,3 @@
-/* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
   "compileOnSave": false,
   "compilerOptions": {
@@ -19,8 +18,13 @@
     "target": "es2022",
     "module": "es2020",
     "lib": [
-      "es2018", 
+      "es2018",
       "dom"
+    ],
+    "types": [
+      "cypress",
+      "jasmine",
+      "node"
     ],
     "useDefineForClassFields": false
   },
@@ -29,5 +33,11 @@
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
     "strictTemplates": true
-  }
+  },
+  "include": [
+    "src/**/*.ts",
+    "cypress/**/*.ts",
+    "e2e/**/*.ts",
+    "global.d.ts"
+  ]
 }
